--- a/index.html
+++ b/index.html
@@ -8,6 +8,22 @@
                 font-family: dotum;
                 line-height:1.6em;
             }
+            body.black{
+                background-color: black;
+                color:white;
+            }
+            body.black a{
+                color:white;
+            }
+            body.black a:hover{
+                color:yellow;
+            }
+            body.black header{
+                border-bottom:1px solid #333;
+            }
+            body.black nav{
+                border-right: 1px solid #333;
+            }
             header{
                 border-bottom:1px solid #ccc;
                 padding:20px 10pt;
@@ -45,14 +61,14 @@
         </style>
     </head>
     
-    <body>
+    <body id="screen">
         <div>
             <header>
                 <h1>JavaScript</h1>
             </header>
             <div id="toolbar">
-                <input type="button" value="black"/>
-                <input type="button" value="white"/>
+                <input type="button" value="black" onclick="document.getElementById('screen').className='black'"/>
+                <input type="button" value="white" onclick="document.getElementById('screen').className='white'"/>
         </div>
         <nav>
             <ul>
